<resources>
    <string name="app_name">SQL_Database</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="register">Register</string>
    <string name="login">LOGIN</string>
    <string name="login_here">Login Here</string>
    <string name="login2">Login</string>
    <string name="register2">Register</string>
</resources>